# vitext2sql

./: .gitignore  README.md  agent.py  database_manager.py  llm_client.py  prompts.py  pyproject.toml  result_validation.py  tokenizer.py  ui.py  ui_claude.py  utils.py  xoaduoc.py
.streamlit/: config.toml
data/: baseball_1_base_prompt.txt
db/baseball_1/external_knowledge/db_des_context/: 1754330522.txt
db/baseball_1/external_knowledge/sql_ex_context/: 1754330237.txt
notebooks/: playground.py  test_agent.py  test_database_manager.py  test_full_pipeline.py  test_llm_client.py
pre/: build_index.py  chat.py  create_tables_sorted.sql  query_lsh.py  reconstruct_data.py  reconstruct_data.py.updapted  retrive_external_context.py  schema_linking.py  setup_vector_chromadb.py  sqlite.py  ui.py  utils.py
pre/db/baseball_1/: baseball_1.sqlite
pre/db/baseball_1/db_chroma/: chroma.sqlite3
pre/db/baseball_1/db_des/: db_des.txt
pre/db/baseball_1/final_context_prompts/: 1754094053.txt  1754095281.txt
pre/db/baseball_1/prompts/: 1754091022.txt  1754093761.txt  1754093930.txt  1754094053.txt  1754095281.txt  1754329710.txt
pre/db/baseball_1/schema/: DDL.csv  bình_chọn_giải_thưởng_dành_cho_cầu_thủ.json  bình_chọn_giải_thưởng_dành_cho_huấn_luận_viên.json  cầu_thủ.json  cầu_thủ_của_trường_đại_học.json  giải_thưởng_dành_cho_cầu_thủ.json  giải_thưởng_dành_cho_huấn_luyện_viên.json  giải_đấu_của_tất_cả_các_ngôi_sao.json  giải_đấu_sau_mùa_giải.json  lương.json  lần_xuất_hiện.json  nhượng_quyền_thương_mại_của_các_đội.json  sân_vận_động.json  thành_tích_huấn_luyện_viên.json  thành_tích_huấn_luyện_viên_theo_hiệp.json  thành_tích_ném_bóng.json  thành_tích_ném_bóng_sau_mùa_giải.json  thành_tích_phòng_ngự.json  thành_tích_phòng_ngự_sau_mùa_giải.json  thành_tích_phòng_ngự_sân_ngoài.json  thành_tích_đánh_bóng.json  thành_tích_đánh_bóng_sau_mùa_giải.json  thành_tích_đội_theo_hiệp.json  trường_đại_học.json  trận_đấu_sân_nhà.json  đại_lộ_danh_vọng.json  đội.json
pre/db/perpetrator/: perpetrator.sqlite
pre/db/perpetrator/schema/: DDL.csv  (+2 more)
pre/sql_ex_collection/31ee29ce-6e80-403b-b2ff-e67847327a51/: index_metadata.pickle
(+135 files in other folders)
