[project]
name = "vitext2sql"
version = "0.1.0"
description = "An attempt at building a usable text2sql interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.6.0",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "flagembedding>=1.3.5",
    "func-timeout>=4.3.5",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "marimo>=0.14.10",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pip>=25.2",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.42",
    "sqlglot>=27.1.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "underthesea==1.3.3",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "marimo[lsp]>=0.14.10",
]

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]
